# ffmpeg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake
microbench/: CMakeLists.txt  avframe_wrapper.cpp  avframe_wrapper.hpp  ffmpeg_decode_sample.c  inheritance.cpp  template.cpp
src/: CMakeLists.txt  seek.cpp  seek.hpp
util/: CMakeLists.txt  PixelConverter.cpp  PixelConverter.hpp
